--- a/docs/usp570/bib_usp570.bib
+++ b/docs/usp570/bib_usp570.bib
@@ -30,6 +30,48 @@
   URL={https://transfersmagazine.org/enough-with-the-ds-already-lets-get-back-to-a/}
 }
 
+@article{hansen1959accessibility,
+  title={How accessibility shapes land use},
+  author={Hansen, Walter G},
+  journal={Journal of the American Institute of planners},
+  volume={25},
+  number={2},
+  pages={73--76},
+  year={1959},
+  publisher={Taylor \& Francis}
+}
+
+@article{proffitt2019accessibility,
+  title={Accessibility planning in American metropolitan areas: Are we there yet?},
+  author={Proffitt, David G and Bartholomew, Keith and Ewing, Reid and Miller, Harvey J},
+  journal={Urban Studies},
+  volume={56},
+  number={1},
+  pages={167--192},
+  year={2019},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{boisjoly2017insider,
+  title={The insider: A planners' perspective on accessibility},
+  author={Boisjoly, Genevi{\`e}ve and El-Geneidy, Ahmed M},
+  journal={Journal of Transport Geography},
+  volume={64},
+  pages={33--43},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{boisjoly2017get,
+  title={How to get there? A critical assessment of accessibility objectives and indicators in metropolitan transportation plans},
+  author={Boisjoly, Genevi{\`e}ve and El-Geneidy, Ahmed M},
+  journal={Transport Policy},
+  volume={55},
+  pages={38--50},
+  year={2017},
+  publisher={Elsevier}
+}
+
 @article{bopp2015examining,
   title={Examining the link between public transit use and active commuting},
   author={Bopp, Melissa and Gayah, Vikash and Campbell, Matthew},
