--- a/docs/usp570/pm_usp570.Rmd
+++ b/docs/usp570/pm_usp570.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "Policy Memo"
-author: ""
+subtitle: "Accessibility measures for regional transportation planning"
 date: 'May 2 - June 11'
 output:
-  word_document: null
   pdf_document: default
+  word_document: null
 bibliography: bib_usp570.bib
 mainfont: Times New Roman
 geometry: margin=1in
@@ -12,62 +12,263 @@ spacing: single
 fontsize: 12pt
 ---
 
-### Accessibility measures for regional transportation planning. 
-
-Choose a metropolitan area. This could be the same one that you use for your case study assignment. Imagine that they are going to update their regional transportation plan, along with their processes for selecting projects for funding, at all scales. The staff wants to incorporate measures of accessibility into decision making and needs the MPO board to agree. Prepare a memo for the MPO board that does the following:
-
-Explains and defines accessibility, including why it should be used in transportation decision making
-
-
-Defines different options for measuring accessibility for use in the regional transportation plan, as well as at the project level (e.g. new roadway capacity, transit infrastructure, bike/pedestrian infrastructure, demand and system management projects, etc.).
-Evaluates the accessibility measures. You evaluation should use clear criteria and draw on existing sources.
-Discusses how equity could be incorporated in the accessibility measures. In doing so, how are you defining equity?
-
-
+```{r, include=FALSE}
+options(tinytex.verbose = TRUE)
+```
 
 To:  Scott Haggerty, chair of governing Commission of Bay Area Metropolitan Transportation Commission
 
-From: Michelle (Min Eun) Jeon, Policy Advisor (Writer’s name and title)
+From: Shen Qu, Policy Advisor
 
 Date: 5/2/2019 
 
 RE: Define and measure accessibility in Plan Bay are 2050
 
+# Summary
 
-1. Header (to, from, date, subject) 
+Accessibility, the ease of reaching destinations, is a key land use and transportation performance measure[@boisjoly2017insider].
+Including clear accessibility objectives, definitions, and indicators in Plan Bay Area 2050 is key to promoting the use of metrics in policy and practice.
 
-2. Summary of memo 
+multi-criteria analysis approaches including accessibility indicators need to guide the decision-making process and ultimately. 
+To meet The Bay Area's transportation needs through 2050 while preserving the character of its diverse communities and adapting to future population growth.
+To make progress toward the Bay Area long-range transportation and land use goals.
 
-3. Background and context 
+[@boisjoly2017get]
 
-4. Recommendations 
+equity analysis  greater accessibility reducing the risks of social exclusion for vulnerable individuals *(Preston and Rajé, 2007, Lucas, 2012)*
 
-5. Alternatives 
+Accessibility goals and objectives
 
-6. Limitations and barriers 
+accessibility indicators
 
-7. Conclusion
+Access to destinations metrics
+
+Multiple modes
+
+Visualization tools	
+
+# Background
+
+ - Plan Bay Area 2050: they are going to update their regional transportation plan, along with their processes for selecting projects for funding, at all scales.
+
+Plan Bay Area 2050 is an integrated long-range transportation and land use plan developed and adopt by MTC and ABAG. Work on Plan Bay Area 2050 is expected to begin in August 2019 and focused update that builds upon the growth pattern and strategies developed in the original Plan Bay Area 2040 (adopted in July 2017) but with updated planning assumptions that incorporate key economic, demographic and financial trends from the last four years.
+
+Re-examining the prior Plan’s goals and targets is one of the first steps in updating Plan Bay Area in order to make them as meaningful as possible in measuring the Plan’s performance. In the current 13 performance targets, three goals are about 'Equitable Access'. It is also a response to the most recent federal transportation bills – the Fixing America’s Surface Transportation Act (FAST Act) that require Plan Bay Area to address ‘accessibility and mobility of people and freight’ (U.S. Department of Transportation, 2014). 
+
+Although the three targets are components of accessibility, it does not fully reflect access to destinations. In spite of access afordable housing, a broader range of destinations is generally included
+
+accessibility is one of the most comprehensive performance measures of land use and transportation systems *(El-Geneidy and Levinson, 2006)*. 
+
+is associated with higher employment rates,  provides residents with greater access to a variety of opportunities*(Ornati et al., 1969, Pignatar and Falcocch, 1969, Sanchez, 1999, Blumenberg and Ong, 2001, Sari, 2015, Tyndall, 2015)*,  reducing car use greater transit use *(Chen et al., 2008, Owen and Levinson, 2015b)*,and the resulting greenhouse gas emissions *(Levinson, 1998, Handy, 2002)*. 
+
+accessibility allows increaseing the chances of meeting the other performance targets in Plan Bay Area, including Climate Protection, Healthy and Safe Communities, Open Space and Agricultural Preservation, Economic Vitality, Transportation System Effectiveness, and should hence also be used to assess the overall benefits of potential investments.
+
+The accessibility-based objective is not only to improve social inclusion and reduce social inequities, but also to support and foster economic development through improved employment accessibility for deprived areas. accessibility indicators should be used as general performance indicators.
+
+the concept of accessibility has been a common element in the goals and objectives of transport plans @hansen1959accessibility. 
+
+However, the federal guidelines and prior plan doesn't define access explicitly. The terms accessibility and mobility are used as a vague term that does not reflect the ease of reaching various destinations and often are conflated, “misused”, and “abused” in practice (Halden, 2011). Access to destinations does not translate into indicators that reflect accessibility in previous plans.
+
+Explicitly defining accessibility as the end goal of the transportation network would encourage the establishment of accessibility-based performance indicators and help policy-making for MTC, ABAG, and local governments.
+
+
+# Definition: why it should be used in transportation decision making
+
+Accessibility, defined as the ease of reaching destinations,services, and activities; the distribution, character, and amount of activity around a given place; the choices that the built environment offers to travelers*(Preston and Rajé, 2007; Litman, 2013; @handy2018enough)*, 
+
+for individual, living in an area with relatively high accessibility to jobs is associated with shorter trips, as is working in an area of relatively high housing accessibility.9
+
+for firms: e.g. access to suppliers, workforce, customers, desirable environment (aesthetically pleasing surroundings, clean air and water),amenities (access to recreational and other non-work destinations), friendly government, etc. [@levinson2018metropolitan, p. 111]
+
+Accessibility is instrumental in explaining the spatial form and function of metropolitan areas. 
+It is the "fundamental force for the relationship between transport and land use in a city and their impacts on city organization, development, and planning to achieve more sustainable outcomes."[@levinson2018metropolitan, p. 22] It is one of the most comprehensive measures to assess the complex performance of land use and transportation systems in a region.[@boisjoly2017get], to assess current conditions and proposed policies
+
+Moreover, It’s a goal that almost everyone can agree on, and it opens doors to a host of strategies that could reduce auto dependence and improve quality of life. [@handy2018enough]
+
+# Evaluates the accessibility measures
+
+use accessibility measures to define regional transportation priorities
 
 
 
-### Autonomous vehicles and land use. Choose a metropolitan area. 
+ is largely contingent on the spatial distribution of destinations, influenced by the distribution of residential, economic, cultural and social activities. 
 
-This could be the same one that you use for your case study assignment. Imagine that you have been asked by the MPO to provide advice on how the MPO, as well as the cities within the region, should be planning for autonomous vehicles. Prepare a memo that does the following:
+related to the spatial distribution of opportunities. such as households, jobs, retail stores, health and other services.
 
-Explains the current and projected status of AVs
-Discusses how AVs could influence demand for transportation and, in turn land use. For this analysis, use both theory and research.
-Identifies the benefits and costs of these possible outcomes.
-Presents policy and planning options for mitigating or otherwise addressing the possible land use effects.
-Discusses how the MPO and cities may need alter the tools and analyses they use to consider AVs.
-This memo is just one of a series that the MPO is commissioning on this topic. Therefore, your memo should focus on land use (broadly defined, including housing, parking, urban design). Other memos will covers topics related to AVS such as safety and liability.
 
+ - cumulative-opportunity measures: the availability of opportunities close by
+ 
+(counting exchange opportunities within a defined geographic parameter)
+
+cumulative-opportunity measures typically accounts for the number of opportunities that can be reached from a specific location using a specific mode within a travel costs threshold  (Handy and Niemeier, 1997). For example, the number of jobs that are within 45 min of travel times by transit from a specific place is used to assess the access to jobs by public transit.
+
+cumulative-opportunity measures are easy to generate, interpret, and to communicate. they are most commonly used by policy-makers as they provide a comprehensive measure of the land use and transport system at the regional level (Dodson et al., 2007). and thus better suited for planning documents
+
+ - gravity-based measure: the ease and worth of travel to destinations far away
+
+(pitting the importance of given exchange opportunities against travel time impedances), 
+
+the gravity-based measure discounts opportunities based on a distance-decay function.based on their travel costs. Accordingly, opportunities that are located farther (by distance or time) receive less weight than closer opportunities. 
+
+this measure better reflect travel behavior as it accounts for the travelers’ perceptions of time (Ben-Akiva and Lerman, 1979). 
+
+This measure is not directly expressed in terms of the number of opportunities. is more complex to generate, and more difficult to interpret and communicate (Geurs and van Wee, 2004; A. Owen and Levinson, 2014).
+
+Integrating both cumulative-opportunity and gravity-based measure, including access to transport and to destinations, would provide a good indication of transport coverage, captures the performance of the land use and transportation systems, which better reflect the social and economic benefits (Banister, 2008, Koenig, 1980, Wachs and Kumagai, 1973).
+
+
+|   |cumulative-opportunity measures|gravity-based measure
+|---|---|---
+access to destinations|   |
+Access to public transport   |
+ 
+
+ - the evaluation of Local accessibility.
+
+A new transport infrastructure improvement increases the relative accessibility of some places that can directly use the facility
+
+Local accessibility is primarily determined by nearby activity (approximately one-half to one mile (800 to 1,600 m) in residential areas). include to grocery stores, schools, parks or public transport station for example libraries, schools, grocery stores, hospitals, public parks, educational services  Many of these destinations reflect local accessibility and are thus often associated with cycling and walking. 
+
+ walking and cycling distance thresholds are used instead of travel time thresholds (0.5 miles for walking). These appear to be appropriate measures of accessibility, as time is generally proportional to the distance travelled by bicycle or foot. 
+
+ Access to jobs can also be a reflection of the level of services available around a certain location, as the delivery of services often equates a certain number of employees. 
+
+Neighborhood accessibility policy initiatives speak more to issues of mixing uses on a parcel or neighborhood scale, site design, and more directly, facilitating circulation patterns that enhance walking, bicycling, and transit use.
+
+Analysing future development scenarios in terms of their levels of accessibility could leverage MPOs’ influence on municipal-level land-use decisions. 
+
+Such comparisons could help MPOs provide better information about the performance and the costs of different transportation-infrastructure and land-use scenarios.
+
+Better information about the tradeoffs inherent in different development scnearios can help regions choose projects more objectively.
+
+# equity analysis
+
+Discusses how equity could be incorporated in the accessibility measures. In doing so, how are you defining equity?
+
+Equity analysis based on accessibility indicators generally assess the level of accessibility of specific vulnerable groups relatively the general population, using detailed accessibility metrics. Proximity to Services, Amenities, and Opportunity Areas
+
+Promoting access to housing, jobs and transportation for these residents helps Plan Bay Area’s objective to advance equity in the region; 
+
+Equity analysis can include specific types of destinations, modes, jobs, social groups, or Temporal fluctuations.
+
+  Time restrictions also play an important role in determining accessibility. These include land use, transport and individual constraints such as (opening hours, schedule of services, job starting time)
+
+Increasing accessibility by transit, cycling and walking can contribute to achieving broader environmental, economic and social goals. Such as the percentage of people or jobs that are within 0.5 mile of a public transport station. 
+
+the accessibility to all jobs may not represent the opportunities that are available to different groups of populations.
+segment the accessibility analysis by socio-economic groups. such as income, level of education, gender and vehicle ownership affect one's abilities and needs to access destinations. 
+
+Measures of generalized costs (including financial and time costs). These measures better reflect the total costs of travel as they include both financial and time burdens. is closer to reality and can also provide an insight on fare structures and trip affordability. address the financial constraints that vulnerable individuals may face.
+
+
+An equity analysis that assesses the distribution of benefits and burdens on communities of concern in comparison to the rest of the region.
+ 
+accessibility metrics is about the environmental justice assessment
+
+"Environmental justice is the fair treatment and meaningful involvement of all people regardless of race, color, national origin, or income with respect to the development, implementation, and enforcement of environmental laws, regulations, and policies." 
+
+An environmental justice analysis of investments to determine whether there are any disproportionately high and adverse impacts on low-income and minority populations or communities of concern;
+
+# More options 
+
+Accessibility maps and metrics provide an overview of the land use and transportation network. are useful tools to communicate gaps and thus helps decision-makers, planners and the general population to better grasp the impacts of transportation investments. 
+
+the utility-based measures capture the economic benefits provided by changes in the network. Utility-based measures account for most components of accessibility and can be included in traditional cost-benefit analysis (van Wee, 2016). 
+
+other dimensions of accessibility might currently be neglected in metropolitan transportation plans. For example, affordability, transfer and digital connectivity @lyons2016guidance should come up as the aspects of accessibility objectives.
+
+More efforts are needed to effectively implement accessibility-based approaches.
+
+# Conclusion
+
+Plan Bay Area 2050 sets a roadmap for future transportation investments and will identify what it would take to accommodate expected growth.
+It is neccessary to define and measure accessibility in updating Plan Bay area 2050.
+
+Accessibility, the ease of reaching destinations, allows capturing the complex interactions between land use and transportation systems while providing a social perspective on transportation planning. 
+
+Integrating RTP goals with accessibility-focused performance measures could help MPOs make better decisions about the selection and prioritisation of transportation infrastructure. For instance, prioritising transit improvements to connect key origins and destinations can increase ridership *(Badoe and Miller, 2000; Chakraborty and Mishra, 2013)* 
+
+Regional and local governments can play a key role in setting clear accessibility requirements for transportation planning processes and planning documents. [@boisjoly2017insider]
+
+Clearly defined accessibility goals and objectives are included in the plan. and translated into performance indicators,Accessibility indicators are systematically included in the performance analyses, to ultimately derive policy recommendations. 
+
+metrics are used to assess the general performance of the land use and transportation system, in addition to social equity.for various modes of transport
+
+Overall, using clearly defined indicators, provide greater transparency and typically foster the inclusion of accessibility aspect in the decision-making process.
+
+
+
+# distinguishing Accessibility and Mobility
+
+travel is a derived demand *(Goldman and Gorham, 2006; Grengs et al., 2010; Halden, 2002; Handy and Niemeier, 1997; Levine et al., 2012)*.
+people travel to places where they can meet their daily needs, not simply to move about. 
+the purpose of most travel is about the destination, not the journey.
+
+accessibility  focuses on reaching destinations, the end goal of a transportation network, focused on making it easier for individuals to reach destinations where they can meet daily needs such as work, recreation, socialising, shopping, and other forms of social exchange *(Martens, 2015; Miller, 2005)*. 
+
+Mobility is concerned with how easy it is to travel. focuses on travel speeds. Improvements in mobility alone are not sufficient to ensure improvements in accessibility. [@proffitt2019accessibility]
+
+Planning for accessibility, Land use policies designed to bring destinations within walking distance of residential areas. may not even require retrofitting neighborhoods. For example, transit services that link specific groups of users to their desired destinations, such as reverse commute programs and other client-based transport services, Efforts like these reduce the need to drive,.25
+
+it facilitates the evaluation of tradeoffs between land use, transportation and social needs. By combining aspects of land use and transportation into a single measure, accessibility focuses attention on the performance of the system as a whole rather than on just segments of the transportation network.
+
+the clear distinction between mobility and accessibility indicators.  Interestingly, accessibility and mobility are included as two distinct goals with different criteria and methodologies, 
+
+Having shorter travel times does not necessarily equate to having access to a larger number of destinations. Furthermore, as discussed by Litman (2013), strategies aiming at increasing traffic speed may in some cases lead to an overall reduction in accessibility. In sum, increased mobility does not always result in increased accessibility (Halden, 2011, Levine et al., 2012).
+
+‘traditional transport planning, which tends to focus on improvements to the transport system that facilitate mobility, without considering the access needs that drive travel behaviour’ (Chapman and Weir, 2008: 7).
+
+Accessibility is increasingly seen as an alternative to mobility oriented planning paradigm (Geurs et al., 2012), as it allows capturing the complex interactions between land use and transportation systems (Hansen, 1959) and provides a social perspective on transportation planning (Banister, 2008, Lucas, 2012). 
+While mobility merely reflects the ease of moving, accessibility addresses the ease of reaching desired destinations, which is in fact the reason why people undertake trips (Preston and Rajé, 2007). 
+
+
+
+Planning for mobility has taken on the meaning of making it easier to get around. 
+This focus on the ease of traveling along the transport network itself (rather than focusing on the ease of reaching destinations) has aligned well with modern planning paradigms; 
+road building has been the most popular solution to congestion. These paradigms prize the planning-for-mobility perspective because it accommodates growing levels of travel and increases the potential for movement.
+
+ conventional practice in transportation planning has employed a ‘predict and provide’ model that focuses the majority of funding and planning attention on expanding roadway capacity. [@levinson2018metropolitan, p. 22] 
+ 
+performance metrics that focus on roadway congestion as experienced by automobile drivers *(Ewing, 1993; Handy, 2005; Krizek and Levinson, 2010)*, with higher vehicle speeds the ‘fundamental criterion for success’ *(Levine et al., 2012: 158)*. Speed-based metrics include roadway level of service (LOS), peak-period delay, traffic volume/road capacity, travel time/speed, vehicle hours of travel, the duration of peak-period congestion, and others *(Ewing, 1996; Transportation Research Board, 2010)*. Even high-occupancy toll lanes, the most common demand-management strategy used in the USA, are typically added as new capacity, only rarely replacing existing highway travel lanes *(Ewing and Proffitt, 2016)*. Planning for higher travel speeds that facilitate longer and often more frequent trips is the mobility paradigm.
+
+
+improving mobility – via automobile, transit, or any other travel mode – means facilitating faster travel speeds so individuals can reach more destinations in a given travel time, improving proximity means shortening distances between trip origins and destinations so individuals can reach a satisfactory number of exchange opportunities even if they travel more slowly. In other words, neighbourhoods, cities, and metro areas can be made more accessible by reducing travel distances as well as by facilitating faster travel. The advantage of planning for accessibility versus planning solely for (auto)mobility is that the former allows for a comparison of the tradeoffs among financial, environmental and human health and wellbeing concerns when making decisions about land use and transportation.
+
+
+Accessibility does not depend on good mobility.Some places such as San Francisco downtown have good accessibility despite having poor mobility (severe traffic congestion). The Residents live within a short distance of all needed and desired destinations. the travel times between destinations are relatively short, even if travel speeds are low.
+
+In the suburban areas of Bay Area, transit service is relatively sparse and destinations are generally beyond walking distance, leaving residents with no option but to drive. the practice of planning is largely mobility-dependent, and car-dependent and has deteriorated levels of accessibility. As traffic levels invariably increase in these areas, accessibility ultimately declines for all modes.
+
+[@proffitt2019accessibility] increasingly tight budgets and a growing awareness that it simply is not possible for regions to pave their way out of congestion do seem to be pushing many MPOs to look for alternatives to expanding roadway capacity. Improving accessibility by coordinating land-use and transportation rather than an exclusive focus on automobility is one such alternative.
+
+
+
+# multi-criteria analyses
+
+accessibility indicators should systematically be included in multi-criteria analyses. 
+
+it offers an alternative to mobility-based decisions and potentially provide greater transparency in the decision-making process (Halden, 2011). Furthermore, national and regional authorities can require local authorities to address accessibility in their project analysis. One especially effective way of doing so is by including accessibility criteria in the selection process of projects, 
+
+One of the most systematic and transparent way to inform decision-making is by including accessibility indicators into multi-criteria analyses.  a multi-criteria analysis was conducted to compare the projects submitted by local jurisdictions and to select the ones to be included in the RTP. to conduct a prioritization of the projects to assess the effectiveness of various modelling scenarios.
+
+The accessibility indicators included in the multi-criteria analyses range from broad questions to specific quantified metrics, which influence the flexibility of the analysis. 
+For example, Transport for London defines clear specific accessibility metrics, for example the change in the number of jobs accessible by public transport within 45 minutes travel time (see Table 1). These access to jobs metrics are relatively easy to generate and to interpret. 
+Accordingly, they foster the inclusion of accessibility indicators that adequately reflect the ease of reaching destinations. Furthermore, given their specific nature, they are easy to communicate as exemplified in the plan: “Implementing the schemes will increase the employment catchment area of central London (the number of people within 45 minutes of central London employment) by almost 25 percent.” (p.74). 
+
+
+An intermediate way of defining accessibility indicators is by attributing scores (from 1 to 3 for example) based on specific guidelines. This approach has the advantage of defining clear weights associated with accessibility criteria, thus providing greater transparency. 
+
+quantified metrics provide more specific guidelines that directly reflect the ease of reaching destinations. However, they provide lower flexibility and might not adequately reflect the outcomes of the different investments. 
 
 
 Notes {#notes}
 ==========
 
-[^1]: 
-
+Decrease the share of lower-income residents’ household income consumed by transportation and housing by 10%.
+ 
+Increase the share of affordable housing in PDAs, TPAs, or high-opportunity areas by 15%.
+ 
+Do not increase the share of low- and moderate-income renter households in PDAs, TPAs, or high-opportunity areas that are at risk of displacement.
 
 ---
 nocite: | 
