--- a/docs/usp570/rr_usp570.Rmd
+++ b/docs/usp570/rr_usp570.Rmd
@@ -2,10 +2,10 @@
 title: "Reading reflections"
 subtitle: "USP 570"
 author: 'Shen Qu'
-date: "Week 4"
+date: "Week 5"
 output:
-  word_document: null
   pdf_document: default
+  word_document: null
 bibliography: bib_usp570.bib
 mainfont: Times New Roman
 geometry: margin=1in
@@ -23,51 +23,25 @@ options(repos="https://cran.rstudio.com")
 ```
 
 
- - Balance and imbalance, the theories of location selection
+ - virtuous circle or vicious circle in mode split
  
-@levinson2018metropolitan introduce how the networks within economies dictate the current lay of land use. The networks include public and non-public entities. The firms as the non-public entities, including developers and locators (non-retailers [Chapter.8] and retailers [Chapter.9]), always try to reduce transaction costs taking place within firms while market-saving transaction costs by the gains from specialization and economies of scale. Developers provide space for producing/consuming, exchanging, and connecting.
+@levinson2018metropolitan [Chapter.5] introduce some concepts about individual demand, modal competition, and network effects explain the mode choice decisions. The discipline of psychology defines travel behavior as habitual behavior which means “learned sequences of acts that have become automatic responses to specific cues, and are functional in obtaining certain goals or end-states.”
 
-Suppliers, competitors, complementors, and customers are four basic factors of firms' location selection in metropolitan areas @levinson2018metropolitan [Chapter.8]. The four factors also form an economic network, which dominates a business's location related to the proximity of both labor and material, which is called the supply chain.
-The supply chain is "a network of facilities and distribution options that procures materials, transforms the materials into intermediate and finished products, and distributes the finished products to customers."[@ganeshan2005introduction]
-
-Most of the location-related theories based on the assumption of minimizing transportation cost and maximizing externalities. From Alfred Weber's Industrial Location Theory to @alonso1960theory's bid-rent curve in a monocentric city, @christaller1966central's central place theory, @zipf1949human's Law about the hierarchy of places, and @losch1967economics's theory about firms' location decisions and the spatial competition between them, explain how locators compete for the sites with higher accessibility.
-
-As a model of New Economic Geography (NEG), agglomeration economies [@fujita2001spatial] provide another type of explanation. Some positive inter-firm externalities, information spillovers, local non-traded inputs, and a local skilled labor pool, explain clusters of employment such as edge cities, suburban activity centers, secondary business districts, and polynucleated city.
-
-Accessibility works for both types of theory. Spatial proximity to the workforce, supplier, or consumer can reduce transaction costs. @levinson2018metropolitan list ten factors[^1] which affect the location decision and rate of development. In the authors' words, all relate to accessibility in some ways.
-
-Economies of agglomeration are also the driving force to break the jobs-housing balance. Residences and firms are competing for the same land. Although job and workers are largely in balance at the metropolitan level, they are always imbalanced inside metropolitan. Even jobs-worker are balanced in number by some policy or design; the workforce may not be compatible with local jobs, which is called spatial mismatch.
-
- - Gentrification and displacement
+travelers are generally being individually rational. They select automobile for transit's weakness in terms of door-to-door travel time.
+**Wardrop’s Principle of User Equilibrium**10 states that users are minimizing their own time rather than minimizing society’s overall travel time. **arms race** is another reason of consumer prefer SUVs than compact car, choosing car instead of bicycle in some case. The competition between users leads to overuse “common pool” resources that have limited supply and free access, bids up the cost for everyone. The competition between modes may result in socially sub-optimal results and lead to a vicious circle.
  
-Gentrification and displacement are the consequences of this imbalance. @zuk2015gentrification's literature review analyses the definitions of gentrification and replacement. The authors also examine the approaches to measuring gentrification and displacement. In the end, the authors emphasize the role of public investments in transportation infrastructure on neighborhood change.
+To avoid **Prisoner’s Dilemma**, a mechanism should let players consider their effects on others, care about the future payoffs, and play a Pareto efficient strategy. The investment and subsidies in transit show a collective rationality for lower total social travel costs by a high transit mode share.
+The **Mohring Effect**7 states that When bus frequency increases on a given route, users benefit from reduced waiting times, an increasing returns property of networks
+The positive feedback loop. 
 
-In hedonic models, increasing housing price is a positive signal responding the infrastructure improvement. In another perspective, some scholars find higher housing price is a causal factor associated with the gentrification. The distinction in three types of displacement pressure can explain the phenomenon in some way. Disinvestment, Reinvestment, and enhanced market competition result in the involuntary displacement, which can occur even in the absence of gentrification. Previous studies cannot establish a relationship between gentrification and displacement. The authors suggest that future research should examine more aspects except for home price increases, and should explore the impact of public investment on commercial change, employment partners, affordability of goods and services, and change in clientele.
+Transit supply and demand have two stable states: One at high wait time yields zero ridership, which returns high wait time. Another at low wait time yields high rider ship, which returns low wait times. The interim states are not stable and need large subsidies to prop them up. 
 
-Since violence has plummeted dramatically since the 1990s, @sharkey2018uneasy argues that gentrification has brought unrecognized benefits to the poor in many cities. Sharkey also says that "the relative lack of income mobility at the neighborhood level across the USA challenges the narrative of rampant gentrification." @sampson2019neighborhood's study shows that, rather than public investment, neighborhood inequality is an important driver and mediator of urban transformation. The discussion should focus on neighborhood structure which is "a persistent feature of urban systems that exert causal effects on a wide variety of everyday life." The research of transportation and land use should not only observe where people live, but also observe where they travel throughout a city and to whom they are exposed by visits from others.
+ - Describing people's travel
 
+In Chapter.6, @levinson2018metropolitan describe and explain people's time spent in activities and transportation. The destination characteristics strongly influence trip characteristics. These discribtion only let us realize the complex of travel behaviors. It's still hard to understand and measure the whole prossess of trips. The analysts use several strategies to understand time spent in travel. Work versus non-work trips, simple versus complex tours, there are many dimensions of travel.
+The commom methods include calculate the distance, number of trips, and the mode of travel. Measures can be averaged at different levels from a single individual to a household, to transportation analysis zones, or even to entire metropolitan regions. Hagerstrand’s Space–Time Prism provides a powerful method for representing the relation among activities, individual trips, and total travel.
 
-[^1]: The ten factors that affect the location and rate of development:
-1. market velocity (the general level of activity in a specified market);
-2. price of land;
-3. availability of hard infrastructure (capabilities related to roads, water, sewers);
-4. access choices (intersections, frequency of existing transit services, parking);
-5. human infrastructure (education of workforce, nearby school quality, housing, daycare);
-6. physical character (quality surrounding district, vitality, views and vistas);
-7. environmental quality (healthy air and water);
-8. predictability (no dramatic changes in zoning or character, appropriate capital improvement plan);
-9. amenities (parks, restaurants);
-10. available financing.
-
-
-
-Notes {#notes}
-==========
-
----
-nocite: | 
-  @litman2017evaluating
-...
+"Travel is a derived demand, and therefore we only do it when we want to get somewhere else or when necessary." In other word, how complex people's activities are determines how complex people's travels are. Hamilton suggests that people’s actual commutes were eight times longer than model-predicted values for shortest commutes. It is not strange that "even the most robust models that predict travel distance rarely explain more than 30 percent of the observed variation." The concoction of behaviors is difficult to predict.
 
 
 References {#references .unnumbered}
